# gitdeck

./: .gitignore  Cargo.toml  GEMINI.md  README.md
src/: main.rs
src/app/: app.rs
src/commands/: catalog.rs  executor.rs  mod.rs  model.rs
src/config/: keybindings.rs  mod.rs  theme.rs
src/git/: mod.rs  service.rs
src/models/: domain.rs  graph.rs  mod.rs  ui.rs
src/ui/: layout.rs
