[package]
name = "gitdeck"
version = "0.1.0"
edition = "2021"
description = "Production-minded keyboard-driven Git TUI cockpit"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.28"
git2 = "0.19"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
shlex = "1.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
